# simplecas

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  mise.toml  simplecas.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
migrations/: 0001_init.sql  0002_tenancy.sql
src/: api.rs  auth.rs  cas.rs  config.rs  db.rs  error.rs  main.rs  storage.rs  ui.rs
src/s3/: mod.rs  sigv4.rs  xml.rs
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  index.css  main.tsx  router.tsx
web/src/components/: file-preview.tsx  tree-node.tsx  tree-view.tsx
web/src/components/ui/: resizable.tsx  sheet.tsx
web/src/hooks/: use-tree-dnd.ts  use-tree-keyboard.ts  use-tree-state.ts
web/src/lib/: api.ts  theme.tsx  tree-utils.ts  tree.ts  upload-protocol.ts  upload-worker.ts
