[package]
name = "simplecas"
version = "0.1.0"
edition = "2021"
description = "Content-addressable storage server with S3-compatible gateway, global dedup, and pluggable backends"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["http2", "macros"] }
base64 = "0.22"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
mime_guess = "2"
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
opendal = { version = "0.54", features = ["services-fs", "services-s3", "services-gcs", "services-azblob"] }
percent-encoding = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
